--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "ws": "^8.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
