--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "chart.js": "^4.4.7",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
+    "js-cookie": "^3.0.5",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.22.1",
+    "react-modal": "^3.16.3",
+    "react-router-dom": "^6.28.2",
     "react-scripts": "^5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "util": "^0.12.5",
