--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "buffer": "^6.0.3",
     "chart.js": "^4.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.1",
     "js-cookie": "^3.0.5",
     "path-browserify": "^1.0.1",
