--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.1",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.3",
     "react-router-dom": "^6.28.2",
     "react-scripts": "^5.0.1",
