--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "crypto-browserify": "^3.12.1",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.475.0",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
     "react": "^18.3.1",
