--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-icons": "^4.3.1",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.3",
     "react-router-dom": "^6.28.2",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.15.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "stream-browserify": "^3.0.0",
